@@ -13,45 +13,17 @@
  */
 package com.ocs.dynamo.ui.composite.form;
 
-import java.io.Serializable;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Set;
-import java.util.stream.Collectors;
-
-import org.apache.commons.lang3.StringUtils;
-
+import com.ocs.dynamo.constants.DynamoConstants;
 import com.ocs.dynamo.domain.AbstractEntity;
-import com.ocs.dynamo.domain.model.AttributeModel;
-import com.ocs.dynamo.domain.model.AttributeType;
-import com.ocs.dynamo.domain.model.CascadeMode;
-import com.ocs.dynamo.domain.model.EntityModel;
-import com.ocs.dynamo.domain.model.FieldFactory;
-import com.ocs.dynamo.domain.model.FieldFactoryContext;
+import com.ocs.dynamo.domain.model.*;
 import com.ocs.dynamo.exception.OCSRuntimeException;
-import com.ocs.dynamo.filter.BetweenPredicate;
-import com.ocs.dynamo.filter.EqualsPredicate;
-import com.ocs.dynamo.filter.FlexibleFilterDefinition;
-import com.ocs.dynamo.filter.FlexibleFilterType;
-import com.ocs.dynamo.filter.GreaterOrEqualPredicate;
-import com.ocs.dynamo.filter.GreaterThanPredicate;
-import com.ocs.dynamo.filter.InPredicate;
-import com.ocs.dynamo.filter.LessOrEqualPredicate;
-import com.ocs.dynamo.filter.LessThanPredicate;
-import com.ocs.dynamo.filter.NotPredicate;
-import com.ocs.dynamo.filter.SimpleStringPredicate;
+import com.ocs.dynamo.filter.*;
 import com.ocs.dynamo.filter.listener.FilterChangeEvent;
 import com.ocs.dynamo.filter.listener.FilterListener;
+import com.ocs.dynamo.service.ServiceLocatorFactory;
 import com.ocs.dynamo.ui.Refreshable;
 import com.ocs.dynamo.ui.Searchable;
+import com.ocs.dynamo.ui.UIHelper;
 import com.ocs.dynamo.ui.component.Cascadable;
 import com.ocs.dynamo.ui.component.DefaultVerticalLayout;
 import com.ocs.dynamo.ui.composite.layout.FormOptions;
@@ -68,21 +40,28 @@ import com.vaadin.flow.component.combobox.ComboBox;
 import com.vaadin.flow.component.html.Span;
 import com.vaadin.flow.component.icon.VaadinIcon;
 import com.vaadin.flow.component.orderedlayout.FlexLayout;
-import com.vaadin.flow.component.orderedlayout.FlexLayout.WrapMode;
+import com.vaadin.flow.component.orderedlayout.FlexLayout.FlexWrap;
 import com.vaadin.flow.component.orderedlayout.VerticalLayout;
 import com.vaadin.flow.data.binder.Result;
 import com.vaadin.flow.function.SerializablePredicate;
+import lombok.Getter;
+import lombok.Setter;
+import org.apache.commons.lang3.StringUtils;
+
+import java.io.Serializable;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.ZonedDateTime;
+import java.util.*;
 
 /**
- *
  * A search form for creating flexible search queries. The form contains
  * functionality for adding and removing filter that can be clicked together
  * from an attribute, an operator and a value
  *
- * @author bas.rutten
- *
  * @param <ID> the type of the primary key
  * @param <T>  the type of the entity
+ * @author bas.rutten
  */
 public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends AbstractEntity<ID>>
         extends AbstractModelBasedSearchForm<ID, T> {
@@ -91,7 +70,6 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
      * A region that contains the fields for managing a single filter
      *
      * @author bas.rutten
-     *
      */
     private class FilterRegion {
 
@@ -129,12 +107,13 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
         /**
          * The main layout
          */
-        private FlexLayout layout;
+        @Getter
+        private final FlexLayout layout;
 
         /**
          * The FilterListener that listens for filter changes
          */
-        private FilterListener<T> listener;
+        private final FilterListener<T> listener;
 
         /**
          * The filter for the main field
@@ -149,7 +128,7 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
         /**
          * Label to display when no filter has been selected
          */
-        private Span noFilterLabel;
+        private final Span noFilterLabel;
 
         /**
          * The button used to remove the filter
@@ -175,43 +154,12 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
         FilterRegion(FilterListener<T> listener) {
             this.listener = listener;
             layout = new FlexLayout();
-            layout.setWrapMode(WrapMode.WRAP);
-            layout.addClassName("dynamoFlexRow");
+            layout.setSizeFull();
+            layout.setFlexWrap(FlexWrap.WRAP);
+            layout.addClassName(DynamoConstants.CSS_DYNAMO_FLEX_ROW);
 
-            removeButton = new Button("");
-            removeButton.setIcon(VaadinIcon.TRASH.create());
-            removeButton.addClickListener(e -> {
-                VerticalLayout parent = (VerticalLayout) layout.getParent().orElse(null);
-                parent.remove(layout);
-
-                // remove from list
-                regions.remove(FilterRegion.this);
-
-                // remove the filter
-                if (am != null) {
-                    FilterRegion.this.listener.onFilterChange(new FilterChangeEvent<T>(am.getPath(), fieldFilter, null));
-                }
-            });
-            layout.add(removeButton);
-            removeButton.setClassName("flexRemoveButton");
-
-            attributeFilterComboBox = new ComboBox<>(message("ocs.filter"));
-
-            // find out which attributes can be searched on and sort them in
-            // alphabetical order
-            List<AttributeModel> filteredModels = iterate(getEntityModel().getAttributeModels());
-            filteredModels.sort(
-                    (o1, o2) -> o1.getDisplayName(VaadinUtils.getLocale()).compareToIgnoreCase(o2.getDisplayName(VaadinUtils.getLocale())));
-            // add any attribute models that are not required
-            attributeFilterComboBox.setItems(
-                    filteredModels.stream().filter(a -> !a.isRequiredForSearching() || !hasFilter(a)).collect(Collectors.toList()));
-            attributeFilterComboBox.setItemLabelGenerator(item -> item.getDisplayName(VaadinUtils.getLocale()));
-
-            // add a value change listener that fills the filter type combo box
-            // after a change
-            ValueChangeListener<ValueChangeEvent<?>> vcl = e -> handleFilterAttributeChange(e, restoring);
-            attributeFilterComboBox.addValueChangeListener(vcl);
-            layout.add(attributeFilterComboBox);
+            createRemoveButton();
+            createAttributeFilterComboBox();
 
             noFilterLabel = new Span(message("ocs.select.filter"));
             noFilterLabel.setText("");
@@ -219,98 +167,236 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
         }
 
         /**
-         * Constructs the search predicate based on the field value
-         * 
-         * @param field the input field
-         * @param value the field value
-         * @return
+         * Adds cascade listeners to a component
+         *
+         * @param newComponent the component
          */
-        private SerializablePredicate<T> constructFilter(HasValue<?, ?> field, Object value) {
-            SerializablePredicate<T> filter = null;
+        private void addCascadeListeners(Component newComponent) {
+            if (am.getCascadeAttributes() != null && !am.getCascadeAttributes().isEmpty()) {
+                for (String cascadePath : am.getCascadeAttributes()) {
+                    ValueChangeListener<ValueChangeEvent<?>> listener = event -> handleCascade(event, am, cascadePath);
+                    ((HasValue<?, ?>) newComponent).addValueChangeListener(listener);
+                }
+            }
+        }
 
-            switch (this.filterType) {
-            case BETWEEN:
-                // construct new filter for the selected field (or clear it)
-                if (field == this.auxValueComponent) {
-                    // filter for the auxiliary field
-                    if (value != null) {
-                        auxFilter = new LessOrEqualPredicate<>(am.getPath(), value);
-                    } else {
-                        auxFilter = null;
-                    }
-                } else {
-                    // filter for the main field
-                    if (value != null) {
-                        mainFilter = new GreaterOrEqualPredicate<>(am.getPath(), value);
-                    } else {
-                        mainFilter = null;
-                    }
-                }
+        /**
+         * Adds a value change listener to a component
+         *
+         * @param newComponent the component to add the listener to
+         */
+        private void addValueChangeListener(Component newComponent) {
+            if (newComponent instanceof HasValue) {
+                ValueChangeListener<ValueChangeEvent<?>> listener = event -> handleValueChange(
+                        (HasValue<?, ?>) newComponent, event.getValue());
+                ((HasValue<?, ?>) newComponent).addValueChangeListener(listener);
+            }
+        }
 
-                // construct the aggregate filter
-                if (auxFilter != null && mainFilter != null) {
-                    filter = new BetweenPredicate<>(am.getPath(), (Comparable<?>) ((GreaterOrEqualPredicate<?>) mainFilter).getValue(),
-                            (Comparable<?>) ((LessOrEqualPredicate<?>) auxFilter).getValue());
-                } else if (auxFilter != null) {
-                    filter = auxFilter;
+        private SerializablePredicate<T> constructBetweenFilter(HasValue<?, ?> field, Object value) {
+            SerializablePredicate<T> filter;
+            // construct new filter for the selected field (or clear it)
+            if (field == this.auxValueComponent) {
+                // filter for the auxiliary field
+                if (value != null) {
+                    auxFilter = new LessOrEqualPredicate<>(am.getPath(), value);
                 } else {
-                    filter = mainFilter;
+                    auxFilter = null;
                 }
-                break;
-            case LESS_OR_EQUAL:
-                filter = new LessOrEqualPredicate<>(am.getPath(), value);
-                break;
-            case LESS_THAN:
-                filter = new LessThanPredicate<>(am.getPath(), value);
-                break;
-            case GREATER_OR_EQUAL:
-                filter = new GreaterOrEqualPredicate<>(am.getPath(), value);
-                break;
-            case GREATER_THAN:
-                filter = new GreaterThanPredicate<>(am.getPath(), value);
-                break;
-            case CONTAINS:
-                // like filter for comparing string fields
-                filter = createStringFilter(value, false);
-                break;
-            case NOT_EQUAL:
-                filter = new NotPredicate<>(new EqualsPredicate<>(am.getPath(), value));
-                break;
-            case STARTS_WITH:
-                // like filter for comparing string fields
-                filter = createStringFilter(value, true);
-                break;
-            case NOT_CONTAINS:
-                filter = new NotPredicate<>(createStringFilter(value, false));
-                break;
-            case NOT_STARTS_WITH:
-                filter = new NotPredicate<>(createStringFilter(value, true));
-                break;
-            default:
-                // date only
-                if (am.isSearchDateOnly()) {
-                    LocalDate ldt = (LocalDate) value;
-                    if (LocalDateTime.class.equals(am.getType())) {
-                        filter = new BetweenPredicate<>(am.getPath(), ldt.atStartOfDay(), ldt.atStartOfDay().plusDays(1).minusSeconds(1));
-                    } else {
-                        // zoned date time
-                        filter = new BetweenPredicate<>(am.getPath(), ldt.atStartOfDay(ZoneId.systemDefault()),
-                                ldt.atStartOfDay(ZoneId.systemDefault()).plusDays(1).minusSeconds(1));
-                    }
-                } else if (value != null && !(value instanceof Collection && ((Collection<?>) value).isEmpty())) {
-                    filter = new EqualsPredicate<>(am.getPath(), value);
+            } else {
+                // filter for the main field
+                if (value != null) {
+                    mainFilter = new GreaterOrEqualPredicate<>(am.getPath(), value);
+                } else {
+                    mainFilter = null;
                 }
-                break;
+            }
+
+            // construct the aggregate filter
+            if (auxFilter != null && mainFilter != null) {
+                filter = new BetweenPredicate<>(am.getPath(),
+                        (Comparable<?>) ((GreaterOrEqualPredicate<?>) mainFilter).getValue(),
+                        (Comparable<?>) ((LessOrEqualPredicate<?>) auxFilter).getValue());
+            } else if (auxFilter != null) {
+                filter = auxFilter;
+            } else {
+                filter = mainFilter;
             }
             return filter;
         }
 
         /**
-         * Creates a SimpleStringFilter with certain characteristics
+         * Constructs the search predicate based on the field value
+         *
+         * @param field the input field
+         * @param value the field value
+         * @return the constructed filter
+         */
+        private SerializablePredicate<T> constructFilter(HasValue<?, ?> field, Object value) {
+            value = convertDateOnlyFilter(field, value);
+
+            return switch (this.filterType) {
+                case BETWEEN -> constructBetweenFilter(field, value);
+                case LESS_OR_EQUAL -> new LessOrEqualPredicate<>(am.getPath(), value);
+                case LESS_THAN -> new LessThanPredicate<>(am.getPath(), value);
+                case GREATER_OR_EQUAL -> new GreaterOrEqualPredicate<>(am.getPath(), value);
+                case GREATER_THAN -> new GreaterThanPredicate<>(am.getPath(), value);
+                case CONTAINS ->
+                        // like filter for comparing string fields
+                        createStringFilter(value, false);
+                case NOT_EQUAL -> new NotPredicate<>(new EqualsPredicate<>(am.getPath(), value));
+                case STARTS_WITH ->
+                        // like filter for comparing string fields
+                        createStringFilter(value, true);
+                case NOT_CONTAINS -> new NotPredicate<>(createStringFilter(value, false));
+                case NOT_STARTS_WITH -> new NotPredicate<>(createStringFilter(value, true));
+                default -> convertFilterDefault(value, null);
+            };
+        }
+
+        /**
+         * Default conversion of search filter value.
+         *
+         * @param value  the value to use in the fault
+         * @param filter the filter
+         * @return the result of the conversion
+         */
+        private SerializablePredicate<T> convertFilterDefault(Object value, SerializablePredicate<T> filter) {
+            if (value != null && am.isSearchDateOnly() && am.isSearchForExactValue()) {
+                filter = convertDateOnlyExactMatchFilter(value);
+            } else if (value != null && !(value instanceof Collection && ((Collection<?>) value).isEmpty())) {
+                // default case (simple comparison or non-empty collection)
+                filter = new EqualsPredicate<>(am.getPath(), value);
+            }
+            return filter;
+        }
+
+        /**
+         * Converts a "date only" filter value for just a single date (rather than a range)
+         * @param value the value (LocalDate) to convert
+         * @return the result of the vonersion
+         */
+        private SerializablePredicate<T> convertDateOnlyExactMatchFilter(Object value) {
+            SerializablePredicate<T> filter;
+            LocalDate ldt = (LocalDate) value;
+            if (LocalDateTime.class.equals(am.getType())) {
+                filter = new BetweenPredicate<>(am.getPath(), ldt.atStartOfDay(),
+                        ldt.atStartOfDay().plusDays(1).minusNanos(1));
+            } else {
+                // zoned date time
+                filter = new BetweenPredicate<>(am.getPath(), ldt.atStartOfDay(VaadinUtils.getTimeZoneId()),
+                        ldt.atStartOfDay(VaadinUtils.getTimeZoneId()).plusDays(1).minusNanos(1));
+            }
+            return filter;
+        }
+
+        /**
+         * Converts a "date only" filter value by adding the time stamp.
+         *
+         * @param field the field that holds the value
+         * @param value the value to convert
+         * @return the result of the conversion
+         */
+        private Object convertDateOnlyFilter(HasValue<?, ?> field, Object value) {
+            if (am.isSearchDateOnly() && !am.isSearchForExactValue()) {
+                if (value != null) {
+                    if (LocalDateTime.class.equals(am.getType())) {
+                        LocalDate ldt = (LocalDate) value;
+                        if (field == this.auxValueComponent) {
+                            value = ldt.atStartOfDay().plusDays(1).minusNanos(1);
+                        } else {
+                            value = ldt.atStartOfDay();
+                        }
+                    } else if (ZonedDateTime.class.equals(am.getType())) {
+                        LocalDate ldt = (LocalDate) value;
+                        if (field == this.auxValueComponent) {
+                            value = ldt.atStartOfDay(VaadinUtils.getTimeZoneId()).plusDays(1).minusNanos(1);
+                        } else {
+                            value = ldt.atStartOfDay(VaadinUtils.getTimeZoneId());
+                        }
+                    }
+                }
+            }
+            return value;
+        }
+
+        /**
+         * Creates a combo box for selecting the filter type
+         */
+        private void createAttributeFilterComboBox() {
+            attributeFilterComboBox = new ComboBox<>(message("ocs.filter"));
+            attributeFilterComboBox.setWidth("250px");
+
+            // find out which attributes can be searched on and sort them in
+            // alphabetical order
+            List<AttributeModel> filteredModels = iterate(getEntityModel().getAttributeModels());
+            Locale locale = VaadinUtils.getLocale();
+            filteredModels.sort((o1, o2) -> o1.getDisplayName(locale)
+                    .compareToIgnoreCase(o2.getDisplayName(locale)));
+            // add any attribute models that are not required
+            attributeFilterComboBox.setItems(filteredModels.stream()
+                    .filter(am -> !am.isRequiredForSearching() || !hasFilter(am)).toList());
+            attributeFilterComboBox.setItemLabelGenerator(item -> item.getDisplayName(locale));
+
+            // add a value change listener that fills the filter type combo box
+            // after a change
+            ValueChangeListener<ValueChangeEvent<?>> listener = e -> handleFilterAttributeChange(e, restoring);
+            attributeFilterComboBox.addValueChangeListener(listener);
+            layout.add(attributeFilterComboBox);
+        }
+
+        /**
+         * Creates an auxiliary component
+         *
+         * @param context      the component creation context
+         * @param newComponent the component for which to add an auxiliary component
+         */
+        @SuppressWarnings("unchecked")
+        private void createAuxComponent(FieldCreationContext context, Component newComponent) {
+            Component newAuxComponent = factory.constructField(context);
+            ValueChangeListener<ValueChangeEvent<?>> auxListener = event -> handleValueChange(
+                    (HasValue<?, ?>) newAuxComponent, event.getValue());
+            ((HasValue<?, ?>) newAuxComponent).addValueChangeListener(auxListener);
+
+            VaadinUtils.setLabel(newComponent, am.getDisplayName(VaadinUtils.getLocale()) + " " + message("ocs.from"));
+            VaadinUtils.setLabel(newAuxComponent, am.getDisplayName(VaadinUtils.getLocale()) + " " + message("ocs.to"));
+
+            if (auxValueComponent == null) {
+                layout.add(newAuxComponent);
+            } else {
+                layout.replace((Component) auxValueComponent, newAuxComponent);
+            }
+            auxValueComponent = (HasValue<?, Object>) newAuxComponent;
+        }
+
+        /**
+         * Creates the button for removing a filter row
+         */
+        private void createRemoveButton() {
+            removeButton = new Button("");
+            removeButton.setIcon(VaadinIcon.TRASH.create());
+            removeButton.addClickListener(e -> {
+                VerticalLayout parent = (VerticalLayout) layout.getParent().orElse(null);
+                if (parent != null) {
+                    parent.remove(layout);
+                }
+
+                regions.remove(FilterRegion.this);
+                if (am != null) {
+                    FilterRegion.this.listener.onFilterChange(FilterChangeEvent.<T>builder().propertyId(am.getPath())
+                            .oldFilter(fieldFilter).newFilter(null).build());
+                }
+            });
+            layout.add(removeButton);
+            removeButton.setClassName("flexRemoveButton");
+        }
+
+        /**
+         * Creates a SimpleStringFilter based on the provided parameters
          *
          * @param value      the value to search on
          * @param prefixOnly whether to match by prefix only
-         * @return
+         * @return the created predicate
          */
         private SimpleStringPredicate<T> createStringFilter(Object value, boolean prefixOnly) {
             String valueStr = value == null ? "" : value.toString();
@@ -323,7 +409,7 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
         /**
          * Respond to a change in the selected attribute by updating the filter
          * components
-         * 
+         *
          * @param attributeModel the selected attribute model
          * @param restoring      whether we are restoring an existing filter during
          *                       screen construction
@@ -331,56 +417,9 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
         private void filterAttributeChange(AttributeModel attributeModel, boolean restoring) {
             this.am = attributeModel;
             if (am != null) {
-                ComboBox<FlexibleFilterType> newTypeFilterCombo = new ComboBox<>(message("ocs.type"));
-                ValueChangeListener<ValueChangeEvent<FlexibleFilterType>> ccl = event -> handleFilterTypeChange(
-                        (FlexibleFilterType) event.getValue());
-                newTypeFilterCombo.addValueChangeListener(ccl);
-                newTypeFilterCombo.setItems(getFilterTypes(am));
-                newTypeFilterCombo.setItemLabelGenerator(
-                        item -> getMessageService().getEnumMessage(FlexibleFilterType.class, item, VaadinUtils.getLocale()));
-
-                // cannot remove mandatory filters
-                removeButton.setEnabled(!am.isRequiredForSearching());
-                attributeFilterComboBox.setEnabled(!am.isRequiredForSearching());
-
-                if (typeFilterCombo != null) {
-                    layout.replace(typeFilterCombo, newTypeFilterCombo);
-                } else {
-                    layout.add(newTypeFilterCombo);
-                }
-
-                // hide the value component(s) after a filter change
-                if (mainValueComponent != null) {
-                    layout.remove((Component) mainValueComponent);
-                }
-                if (auxValueComponent != null) {
-                    layout.remove((Component) auxValueComponent);
-                }
-
-                typeFilterCombo = newTypeFilterCombo;
-
-                // pre-select the first value and disable the component if there
-                // is just one
-                // component
-                if (!restoring) {
-                    typeFilterCombo.setValue(getDefaultFilterType(am));
-                }
-
-                // disable if there is only one option
-                if (getFilterTypes(am).size() == 1) {
-                    typeFilterCombo.setEnabled(false);
-                }
+                replaceFilters(restoring);
             } else {
-                // no filter selected, remove everything
-                if (typeFilterCombo != null) {
-                    layout.remove(typeFilterCombo);
-                }
-                if (mainValueComponent != null) {
-                    layout.remove((Component) mainValueComponent);
-                }
-                if (auxValueComponent != null) {
-                    layout.remove((Component) auxValueComponent);
-                }
+                removeFilters();
             }
             noFilterLabel.setVisible(this.am == null);
         }
@@ -389,54 +428,60 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
          * Returns the available filter types for a certain property
          *
          * @param am the attribute model of the property
-         * @return
+         * @return the list of filter types
          */
         private List<FlexibleFilterType> getFilterTypes(AttributeModel am) {
             List<FlexibleFilterType> result = new ArrayList<>();
             result.add(FlexibleFilterType.EQUALS);
-            switch (am.getAttributeType()) {
-            case BASIC:
-                if (String.class.equals(am.getType())) {
-                    if (basicStringFilterProperties.contains(am.getPath())) {
-                        result.add(FlexibleFilterType.CONTAINS);
-                        result.add(FlexibleFilterType.STARTS_WITH);
-                    } else {
+            if (!am.isSearchForExactValue()) {
+                switch (am.getAttributeType()) {
+                    case BASIC:
+                        if (String.class.equals(am.getType())) {
+                            if (basicStringFilterProperties.contains(am.getPath())) {
+                                result.add(FlexibleFilterType.CONTAINS);
+                                result.add(FlexibleFilterType.STARTS_WITH);
+                            } else {
+                                result.add(FlexibleFilterType.NOT_EQUAL);
+                                result.add(FlexibleFilterType.CONTAINS);
+                                result.add(FlexibleFilterType.STARTS_WITH);
+                                result.add(FlexibleFilterType.NOT_CONTAINS);
+                                result.add(FlexibleFilterType.NOT_STARTS_WITH);
+                            }
+                        } else if (Enum.class.isAssignableFrom(am.getType())) {
+                            result.add(FlexibleFilterType.NOT_EQUAL);
+                        } else if (Number.class.isAssignableFrom(am.getType())
+                                || (!am.isSearchDateOnly() && DateUtils.isSupportedDateType(am.getType()))) {
+                            result.add(FlexibleFilterType.BETWEEN);
+                            result.add(FlexibleFilterType.LESS_THAN);
+                            result.add(FlexibleFilterType.LESS_OR_EQUAL);
+                            result.add(FlexibleFilterType.GREATER_OR_EQUAL);
+                            result.add(FlexibleFilterType.GREATER_THAN);
+                        } else if (am.isSearchDateOnly() && DateUtils.isSupportedDateType(am.getType())) {
+                            // for a date only comparison, an exact match does not make sense
+                            result.remove(FlexibleFilterType.EQUALS);
+                            result.add(FlexibleFilterType.BETWEEN);
+                            result.add(FlexibleFilterType.LESS_THAN);
+                            result.add(FlexibleFilterType.LESS_OR_EQUAL);
+                            result.add(FlexibleFilterType.GREATER_OR_EQUAL);
+                            result.add(FlexibleFilterType.GREATER_THAN);
+                        }
+                        break;
+                    case MASTER:
+                    case DETAIL:
+                        // also support "not equal" for entities
                         result.add(FlexibleFilterType.NOT_EQUAL);
-                        result.add(FlexibleFilterType.CONTAINS);
-                        result.add(FlexibleFilterType.STARTS_WITH);
-                        result.add(FlexibleFilterType.NOT_CONTAINS);
-                        result.add(FlexibleFilterType.NOT_STARTS_WITH);
-                    }
-                } else if (Enum.class.isAssignableFrom(am.getType())) {
-                    result.add(FlexibleFilterType.NOT_EQUAL);
-                } else if (Number.class.isAssignableFrom(am.getType())
-                        || (DateUtils.isSupportedDateType(am.getType()) && !am.isSearchDateOnly())) {
-                    result.add(FlexibleFilterType.BETWEEN);
-                    result.add(FlexibleFilterType.LESS_THAN);
-                    result.add(FlexibleFilterType.LESS_OR_EQUAL);
-                    result.add(FlexibleFilterType.GREATER_OR_EQUAL);
-                    result.add(FlexibleFilterType.GREATER_THAN);
+                        break;
+                    default:
+                        break;
                 }
-                break;
-            case MASTER:
-            case DETAIL:
-                // also support "not equal" for entities
-                result.add(FlexibleFilterType.NOT_EQUAL);
-                break;
-            default:
-                break;
             }
             return result;
-        }
-
-        public FlexLayout getLayout() {
-            return layout;
         }
 
         /**
          * Handles a cascading search (responds to a value change by propagating the
          * value change to all cascaded fields)
-         * 
+         *
          * @param event       the search event
          * @param am          the attribute model
          * @param cascadePath the cascade path
@@ -453,27 +498,32 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
                             ca.clearAdditionalFilter();
                         } else {
                             if (event.getValue() instanceof Collection) {
-                                ca.setAdditionalFilter(
-                                        new InPredicate<S>(am.getCascadeFilterPath(cascadePath), (Collection<S>) event.getValue()));
+                                ca.setAdditionalFilter(new InPredicate<>(am.getCascadeFilterPath(cascadePath),
+                                        (Collection<S>) event.getValue()));
                             } else {
-                                ca.setAdditionalFilter(new EqualsPredicate<S>(am.getCascadeFilterPath(cascadePath), event.getValue()));
+                                ca.setAdditionalFilter(
+                                        new EqualsPredicate<>(am.getCascadeFilterPath(cascadePath), event.getValue()));
                             }
                         }
                     } else {
                         // field not found or does not support cascading
-                        throw new OCSRuntimeException("Cannot setup cascading from " + am.getPath() + " to " + cascadePath);
+                        throw new OCSRuntimeException(
+                                "Cannot setup cascading from %s to %s".formatted(am.getPath(), cascadePath));
                     }
                 }
             }
         }
 
-        /**
-         * Handle a change of the attribute to filter on
-         *
-         * @param event the event
-         */
         private void handleFilterAttributeChange(HasValue.ValueChangeEvent<?> event, boolean restoring) {
             AttributeModel temp = (AttributeModel) event.getValue();
+
+            if (mainValueComponent != null) {
+                mainValueComponent.clear();
+            }
+            if (auxValueComponent != null) {
+                auxValueComponent.clear();
+            }
+
             filterAttributeChange(temp, restoring);
         }
 
@@ -490,27 +540,14 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
             Object oldValue = mainValueComponent == null ? null : mainValueComponent.getValue();
             Object oldAuxValue = auxValueComponent == null ? null : auxValueComponent.getValue();
 
-            // construct the field
-            Component custom = constructCustomField(getEntityModel(), am);
+            FieldCreationContext context = FieldCreationContext.create().attributeModel(am)
+                    .fieldEntityModel(getFieldEntityModel(am)).fieldFilters(getFieldFilters()).viewMode(false)
+                    .search(true).build();
 
-            FieldFactoryContext context = FieldFactoryContext.create().setAttributeModel(am).setFieldEntityModel(getFieldEntityModel(am))
-                    .setFieldFilters(getFieldFilters()).setViewMode(false).setSearch(true);
-            Component newComponent = custom != null ? custom : factory.constructField(context);
-
-            // add value change listener for adapting fields in response to input
-            if (newComponent instanceof HasValue) {
-                ValueChangeListener<ValueChangeEvent<?>> listener = event -> handleValueChange((HasValue<?, ?>) newComponent,
-                        event.getValue());
-                ((HasValue<?, ?>) newComponent).addValueChangeListener(listener);
-            }
-
-            // cascading search
-            if (am.getCascadeAttributes() != null && !am.getCascadeAttributes().isEmpty()) {
-                for (String cascadePath : am.getCascadeAttributes()) {
-                    ValueChangeListener<ValueChangeEvent<?>> listener = event -> handleCascade(event, am, cascadePath);
-                    ((HasValue<?, ?>) newComponent).addValueChangeListener(listener);
-                }
-            }
+            Component newComponent = constructCustomComponent(getEntityModel(), am)
+                    .orElseGet(() -> factory.constructField(context));
+            addValueChangeListener(newComponent);
+            addCascadeListeners(newComponent);
 
             if (mainValueComponent == null) {
                 layout.add(newComponent);
@@ -521,18 +558,7 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
             mainValueComponent = (HasValue<?, Object>) newComponent;
 
             if (FlexibleFilterType.BETWEEN.equals(filterType)) {
-
-                Component newAuxComponent = factory.constructField(context);
-                ValueChangeListener<ValueChangeEvent<?>> auxListener = event -> handleValueChange((HasValue<?, ?>) newAuxComponent,
-                        event.getValue());
-                ((HasValue<?, ?>) newAuxComponent).addValueChangeListener(auxListener);
-
-                if (auxValueComponent == null) {
-                    layout.add(newAuxComponent);
-                } else {
-                    layout.replace((Component) auxValueComponent, newAuxComponent);
-                }
-                auxValueComponent = (HasValue<?, Object>) newAuxComponent;
+                createAuxComponent(context, newComponent);
             } else {
                 // no need for the auxiliary field
                 if (auxValueComponent != null) {
@@ -541,17 +567,7 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
                 }
             }
 
-            // try to restore old values
-            try {
-                if (oldValue != null) {
-                    mainValueComponent.setValue(oldValue);
-                }
-                if (oldAuxValue != null && auxValueComponent != null) {
-                    auxValueComponent.setValue(oldAuxValue);
-                }
-            } catch (Exception ex) {
-                // do nothing
-            }
+            restoreOldValues(oldValue, oldAuxValue);
         }
 
         /**
@@ -572,28 +588,99 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
                 // store the current filter
                 this.fieldFilter = filter;
                 // propagate the change (this will trigger the actual search action)
-                listener.onFilterChange(new FilterChangeEvent<>(am.getPath(), oldFilter, filter));
+                listener.onFilterChange(FilterChangeEvent.<T>builder().propertyId(am.getPath()).oldFilter(oldFilter)
+                        .newFilter(filter).build());
             });
             result.ifError(r -> ((HasValidation) field).setErrorMessage(r));
         }
 
+        private void removeFilters() {
+            // no filter selected, remove everything
+            if (typeFilterCombo != null) {
+                layout.remove(typeFilterCombo);
+            }
+            if (mainValueComponent != null) {
+                layout.remove((Component) mainValueComponent);
+            }
+            if (auxValueComponent != null) {
+                layout.remove((Component) auxValueComponent);
+            }
+        }
+
         /**
-         * Extracts the filter definition from the region
+         * Rebuild any currently selected filters
          *
-         * @return
+         * @param restoring whether we are restoring an existing set of filters
          */
+        private void replaceFilters(boolean restoring) {
+            ComboBox<FlexibleFilterType> newTypeFilterCombo = new ComboBox<>(message("ocs.type"));
+            newTypeFilterCombo.setWidth("250px");
+            ValueChangeListener<ValueChangeEvent<FlexibleFilterType>> ccl = event -> handleFilterTypeChange(
+                    event.getValue());
+            newTypeFilterCombo.addValueChangeListener(ccl);
+            newTypeFilterCombo.setItems(getFilterTypes(am));
+            newTypeFilterCombo.setItemLabelGenerator(item -> getMessageService()
+                    .getEnumMessage(FlexibleFilterType.class, item, VaadinUtils.getLocale()));
+
+            // cannot remove mandatory filters
+            removeButton.setEnabled(!am.isRequiredForSearching());
+            attributeFilterComboBox.setEnabled(!am.isRequiredForSearching());
+
+            if (typeFilterCombo != null) {
+                layout.replace(typeFilterCombo, newTypeFilterCombo);
+            } else {
+                layout.add(newTypeFilterCombo);
+            }
+
+            // hide the value component(s) after a filter change
+            if (mainValueComponent != null) {
+                layout.remove((Component) mainValueComponent);
+            }
+            if (auxValueComponent != null) {
+                layout.remove((Component) auxValueComponent);
+            }
+
+            typeFilterCombo = newTypeFilterCombo;
+
+            // select the first value and disable the component if there
+            // is just one component
+            if (!restoring) {
+                typeFilterCombo.setValue(getDefaultFilterType(am));
+            }
+
+            // disable if there is only one option
+            if (getFilterTypes(am).size() == 1) {
+                typeFilterCombo.setEnabled(false);
+            }
+        }
+
+        private void restoreOldValues(Object oldValue, Object oldAuxValue) {
+            try {
+                if (oldValue != null) {
+                    mainValueComponent.setValue(oldValue);
+                }
+                if (oldAuxValue != null && auxValueComponent != null) {
+                    auxValueComponent.setValue(oldAuxValue);
+                }
+            } catch (Exception ex) {
+                // do nothing
+            }
+        }
+
         public FlexibleFilterDefinition toDefinition() {
             if (mainValueComponent != null) {
-                FlexibleFilterDefinition definition = new FlexibleFilterDefinition();
-                definition.setFlexibleFilterType(filterType);
-                definition.setAttributeModel(am);
+
+                FlexibleFilterDefinition.FlexibleFilterDefinitionBuilder builder = FlexibleFilterDefinition.builder();
+
+                builder.flexibleFilterType(filterType);
+                builder.attributeModel(am);
                 Result<?> result = ConvertUtils.convertToModelValue(am, mainValueComponent.getValue());
-                result.ifOk(v -> definition.setValue(v));
+                result.ifOk(v -> builder.value(v));
                 if (auxValueComponent != null) {
                     result = ConvertUtils.convertToModelValue(am, auxValueComponent.getValue());
-                    result.ifOk(v -> definition.setValueTo(v));
+                    result.ifOk(v -> builder.valueTo(v));
                 }
-                return definition;
+                return builder.build();
             }
             return null;
         }
@@ -604,27 +691,30 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
     /**
      * The button that is used to add a new filter
      */
+    @Getter
     private Button addFilterButton;
 
     /**
      * Path of the properties for which to offer only basic String search
      * capabilities
      */
+    @Getter
+    @Setter
     private Set<String> basicStringFilterProperties = new HashSet<>();
 
     /**
      * The field factory
      */
-    private FieldFactory factory = FieldFactory.getInstance();
+    private final FieldFactory factory = FieldFactory.getInstance();
 
     /**
      * The filter regions
      */
-    private List<FilterRegion> regions = new ArrayList<>();
+    private final List<FilterRegion> regions = new ArrayList<>();
 
     /**
      * Constructor
-     * 
+     *
      * @param searchable  the component on which to carry out the search
      * @param entityModel the entity model
      * @param formOptions the form options
@@ -643,18 +733,8 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
      * @param fieldFilters   a map of filters to apply to the individual fields
      */
     public ModelBasedFlexibleSearchForm(Searchable<T> searchable, EntityModel<T> entityModel, FormOptions formOptions,
-            List<SerializablePredicate<T>> defaultFilters, Map<String, SerializablePredicate<?>> fieldFilters) {
+                                        List<SerializablePredicate<T>> defaultFilters, Map<String, SerializablePredicate<?>> fieldFilters) {
         super(searchable, entityModel, formOptions, defaultFilters, fieldFilters);
-    }
-
-    /**
-     * Adds a new (empty) filter in response to a button click
-     */
-    private void addFilter() {
-        FilterRegion region = new FilterRegion(this);
-        regions.add(region);
-        getFilterLayout().add(region.getLayout());
-        toggle(true);
     }
 
     /**
@@ -662,22 +742,23 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
      * present yet. Otherwise, set the value(s) of the already present filter to the
      * provided values
      *
-     * @param attributeModel the attribute model to base the filter on
-     * @param filterType     the type of the filter
-     * @param value          the value of the filter
-     * @param auxValue       the auxiliary value
+     * @param am         the attribute model to base the filter on
+     * @param filterType the type of the filter
+     * @param value      the value of the filter
+     * @param auxValue   the auxiliary value
      */
-    @SuppressWarnings({ "unchecked", "rawtypes" })
+    @SuppressWarnings({"unchecked", "rawtypes"})
     public void addFilter(AttributeModel am, FlexibleFilterType filterType, Object value, Object auxValue) {
 
         // check if multiple values are allowed
         boolean multi = Collection.class.isAssignableFrom(am.getType()) || am.isMultipleSearch();
-        FilterRegion match = regions.stream().filter(region -> region.am != null && region.am.getPath().equals(am.getPath())).findFirst()
+        FilterRegion match = regions.stream()
+                .filter(region -> region.am != null && region.am.getPath().equals(am.getPath())).findFirst()
                 .orElse(null);
 
         // no matching filter found, create a new one
         if (match == null) {
-            addFilter();
+            addFilterRegion();
             match = regions.get(regions.size() - 1);
             match.attributeFilterComboBox.setValue(am);
             match.filterAttributeChange(am, true);
@@ -716,6 +797,16 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
     }
 
     /**
+     * Adds a new (empty) filter in response to a button click
+     */
+    private void addFilterRegion() {
+        FilterRegion region = new FilterRegion(this);
+        regions.add(region);
+        getFilterLayout().add(region.getLayout());
+        toggle(true);
+    }
+
+    /**
      * Clears all search filters
      */
     @Override
@@ -723,14 +814,14 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
         // remove any non-required filter regions and clear the rest
         Iterator<FilterRegion> it = regions.iterator();
         while (it.hasNext()) {
-            FilterRegion fr = it.next();
-            if (fr.am == null || !fr.am.isRequiredForSearching()) {
-                getFilterLayout().remove(fr.getLayout());
+            FilterRegion region = it.next();
+            if (region.am == null || !region.am.isRequiredForSearching()) {
+                getFilterLayout().remove(region.getLayout());
                 it.remove();
             } else {
-                fr.mainValueComponent.clear();
-                if (fr.auxValueComponent != null) {
-                    fr.auxValueComponent.clear();
+                region.mainValueComponent.clear();
+                if (region.auxValueComponent != null) {
+                    region.auxValueComponent.clear();
                 }
             }
         }
@@ -743,10 +834,9 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
     @Override
     protected void constructButtonBar(FlexLayout buttonBar) {
 
-        // construct button for adding a new filter
         addFilterButton = new Button(message("ocs.add.filter"));
         addFilterButton.setIcon(VaadinIcon.PLUS.create());
-        addFilterButton.addClickListener(evenbt -> addFilter());
+        addFilterButton.addClickListener(event -> addFilterRegion());
 
         buttonBar.add(addFilterButton);
         buttonBar.add(constructSearchButton());
@@ -758,7 +848,9 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
     @Override
     protected VerticalLayout constructFilterLayout() {
         // just an empty layout - filters will be added on the fly
-        return new DefaultVerticalLayout();
+        DefaultVerticalLayout layout = new DefaultVerticalLayout();
+        layout.addClassName("dynamoFlexFilterLayout");
+        return layout;
     }
 
     /**
@@ -766,15 +858,7 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
      * filters
      */
     public List<FlexibleFilterDefinition> extractFilterDefinitions() {
-        return regions.stream().map(FilterRegion::toDefinition).filter(Objects::nonNull).collect(Collectors.toList());
-    }
-
-    public Button getAddFilterButton() {
-        return addFilterButton;
-    }
-
-    public Set<String> getBasicStringFilterProperties() {
-        return basicStringFilterProperties;
+        return regions.stream().map(FilterRegion::toDefinition).filter(Objects::nonNull).toList();
     }
 
     /**
@@ -783,13 +867,18 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
      * @param am the attribute model the attribute model of the property
      */
     public FlexibleFilterType getDefaultFilterType(AttributeModel am) {
+        if (am.isSearchForExactValue()) {
+            return FlexibleFilterType.EQUALS;
+        }
+
         if (AttributeType.BASIC.equals(am.getAttributeType())) {
             if (String.class.equals(am.getType())) {
                 return FlexibleFilterType.CONTAINS;
             } else if (Enum.class.isAssignableFrom(am.getType())) {
                 return FlexibleFilterType.EQUALS;
-            } else if (Number.class.isAssignableFrom(am.getType()) || (DateUtils.isJava8DateType(am.getType()) && !am.isSearchDateOnly())) {
-                return FlexibleFilterType.BETWEEN;
+            } else if (Number.class.isAssignableFrom(am.getType()) || DateUtils.isJava8DateType(am.getType())) {
+                return (am.isSearchForExactValue() && am.isSearchDateOnly()) ? FlexibleFilterType.EQUALS
+                        : FlexibleFilterType.BETWEEN;
             }
         }
         return FlexibleFilterType.EQUALS;
@@ -800,7 +889,7 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
      * <code>null</code> if such a region does not exist
      *
      * @param attributeModel the attribute model
-     * @return
+     * @return the filter region
      */
     public FilterRegion getFilterRegion(AttributeModel attributeModel) {
         return regions.stream().filter(r -> Objects.equals(attributeModel, r.am)).findFirst().orElse(null);
@@ -808,9 +897,9 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
 
     /**
      * Finds a filter region for the specified attribute path
-     * 
+     *
      * @param path the attribute path
-     * @return
+     * @return the filter region
      */
     public FilterRegion getFilterRegion(String path) {
         return regions.stream().filter(r -> Objects.equals(path, r.am.getPath())).findFirst().orElse(null);
@@ -821,7 +910,7 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
      * attribute model
      *
      * @param attributeModel the attribute model
-     * @return
+     * @return true if this is the case, false otherwise
      */
     public boolean hasFilter(AttributeModel attributeModel) {
         return regions.stream().anyMatch(r -> Objects.equals(attributeModel, r.am));
@@ -832,7 +921,7 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
      * attributes that can be searched
      *
      * @param attributeModels the attribute models
-     * @return
+     * @return the filtered list of attribute models
      */
     private List<AttributeModel> iterate(List<AttributeModel> attributeModels) {
         List<AttributeModel> result = new ArrayList<>();
@@ -860,7 +949,7 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
             if (r.mainValueComponent instanceof Refreshable) {
                 ((Refreshable) r.mainValueComponent).refresh();
             }
-            // note: not needed to check aux component since only lookup fields
+            // not needed to check aux component since only lookup fields
             // can be refreshable
         }
     }
@@ -895,18 +984,32 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
             }
             region.restoring = false;
             regions.add(region);
+
             getFilterLayout().add(region.getLayout());
         }
     }
 
     /**
-     * Sets the properties (of type String) for which to only allow simple search
-     * options ("contains" and "starts with") (
-     * 
-     * @param basicStringFilterProperties
+     * Restores previously cached search filters
      */
-    public void setBasicStringFilterProperties(Set<String> basicStringFilterProperties) {
-        this.basicStringFilterProperties = basicStringFilterProperties;
+    @Override
+    protected void restoreSearchValues() {
+        UIHelper helper = ServiceLocatorFactory.getServiceLocator().getService(UIHelper.class);
+        if (helper != null) {
+            List<FlexibleFilterDefinition> filters = helper.retrieveSearchFilterDefinitions();
+            restoreFilterDefinitions(filters);
+        }
+    }
+
+    /**
+     * Stores search filters
+     */
+    @Override
+    protected void storeSearchFilters() {
+        UIHelper helper = ServiceLocatorFactory.getServiceLocator().getService(UIHelper.class);
+        if (helper != null) {
+            helper.storeSearchFilterDefinitions(extractFilterDefinitions());
+        }
     }
 
     @Override
@@ -918,5 +1021,4 @@ public class ModelBasedFlexibleSearchForm<ID extends Serializable, T extends Abs
     public void toggleAdvancedMode() {
         // not needed
     }
-
 }
